force-app/main/default/objects/Contact/fields/LLC_BI__Age__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Age__c</fullName>
    <description>The system automatically populates this formula field to indicate the individual&apos;s age.</description>
    <formula>IF(AND(MONTH(TODAY()) &gt;= MONTH(Birthdate), DAY(TODAY()) &gt;= DAY(Birthdate)),
        YEAR(TODAY()) - YEAR(Birthdate) + (MONTH(TODAY()) - MONTH(Birthdate)) / 12,
        IF(AND(MONTH(TODAY()) &lt; MONTH(Birthdate), DAY(TODAY()) &gt;= DAY(Birthdate)),
            YEAR(TODAY()) - YEAR(Birthdate) - 1 + (12 - MONTH(Birthdate) + MONTH(TODAY())) / 12,
        IF(AND(MONTH(TODAY()) &lt; MONTH(Birthdate), DAY(TODAY()) &lt; DAY(Birthdate)),
            (YEAR(TODAY()) - YEAR(Birthdate) - 1) + ((12 - MONTH(Birthdate) + MONTH(TODAY()) - 1)) / 12,
        IF(AND(MONTH(TODAY()) = MONTH(Birthdate), DAY(TODAY()) &lt; DAY(Birthdate)),
            (YEAR(TODAY()) - YEAR(Birthdate) - 1) + (11/12),
            (YEAR(TODAY()) - YEAR(Birthdate)) + (MONTH(TODAY()) - MONTH(Birthdate) -1) / 12))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field indicates the individual&apos;s age.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>