force-app/main/default/objects/Contact/fields/LLC_BI__Age_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Age_of_Dependents__c</fullName>
    <description>The user populates this text field to list the age of the dependents in the borrower’s household. By default, this field is blank.</description>
    <inlineHelpText>Enter the ages of the dependents in your household.</inlineHelpText>
    <label>Age of Dependents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>