force-app/main/default/objects/Contact/fields/LLC_BI__Aliases__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Aliases__c</fullName>
    <description>The user populates this text field to record all of the borrower’s possible aliases. By default, this field is blank.</description>
    <inlineHelpText>Enter all of the borrower’s possible aliases in this field.</inlineHelpText>
    <label>Aliases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>