force-app/main/default/objects/Contact/fields/LLC_BI__Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Annual_Income__c</fullName>
    <description>Users populate this optional currency field with the applicant&apos;s annual income. By default, it is blank.</description>
    <inlineHelpText>Enter the applicant&apos;s annual income.</inlineHelpText>
    <label>Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>