force-app/main/default/objects/Contact/fields/LLC_BI__Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Drivers_License__c</fullName>
    <description>This field is optional and manually updated. This field functionality is tied to and extended functionality of this field is used in credit reporting. This field should be filled in if you are using the Credit Reporting extensions.</description>
    <label>Drivers License</label>
    <length>20</length>
    <type>Text</type>
</CustomField>