force-app/main/default/objects/Contact/fields/LLC_BI__Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Employer_Name__c</fullName>
    <description>This field is optional and manually updated. The name of the primary employer for the account holder.</description>
    <inlineHelpText>The name of the primary employer for the account holder.</inlineHelpText>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>