force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Birth_Certificate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Birth_Certificate__c</fullName>
    <description>This field is optional and manually updated. Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
    <inlineHelpText>Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
    <label>Form W7 Birth Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Foreign Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>