force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_College_Duration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_College_Duration__c</fullName>
    <description>This field is optional and manually updated. A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
    <inlineHelpText>A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
    <label>Form W7 College Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>