force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_College_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_College_Name__c</fullName>
    <description>This field is optional and manually updated. The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
    <inlineHelpText>The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
    <label>Form W7 College Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>