force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Delegate_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Delegate_Name__c</fullName>
    <description>This field is optional and manually updated. The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
    <inlineHelpText>The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
    <label>Form W7 Delegate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>