force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Delegate_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Delegate_Relationship_Type__c</fullName>
    <description>This field is optional and manually updated. The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
    <inlineHelpText>The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
    <label>Form W7 Delegate Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Court-appointed Guardian</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>