force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Exception_1a_Partnership_EIN__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Exception_1a_Partnership_EIN__c</fullName>
    <description>This field is optional and manually updated. The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</description>
    <inlineHelpText>This field is optional and manually updated. The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</inlineHelpText>
    <label>Form W7 Exception 1a Partnership EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>