force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_National_ID_Card_Verifies__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_National_ID_Card_Verifies__c</fullName>
    <description>This field is optional and manually updated. National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
    <inlineHelpText>National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
    <label>Form W7 National ID Card Verifies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Foreign Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>