force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Previous_First_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Previous_First_Name__c</fullName>
    <description>This field is optional and manually updated. The first name of account holder&apos;s previous name.</description>
    <inlineHelpText>The first name of account holder&apos;s previous name.</inlineHelpText>
    <label>Form W7 Previous First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>