force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Previous_IRSN__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Previous_IRSN__c</fullName>
    <description>This field is optional and manually updated. The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</description>
    <inlineHelpText>The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</inlineHelpText>
    <label>Form W7 Previous IRSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>