force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Previous_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Previous_Name__c</fullName>
    <description>This field is optional and manually updated. The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</description>
    <inlineHelpText>The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</inlineHelpText>
    <label>Form W7 Previous Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>