force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Program_Office__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Program_Office__c</fullName>
    <description>This field is optional and manually updated. The 8-digit office code that was issued to by the ITIN Program Office for the IRS Form W-7.</description>
    <inlineHelpText>The 8-digit office code that was issued to by the ITIN Program Office for the IRS Form W-7.</inlineHelpText>
    <label>Form W7 Program Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>