force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_School_Records_Verifies__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_School_Records_Verifies__c</fullName>
    <description>This field is optional and manually updated. School Records (valid only for dependents under age 14 or under age 18 if a student) verify either identity or foreign status (on IRS form W-7(COA)).</description>
    <inlineHelpText>School Records (valid only for dependents under age 14 or under age 18 if a student) verify either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
    <label>Form W7 School Records Verifies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Foreign Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>