force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Treaty_Article_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Treaty_Article_Number__c</fullName>
    <description>This field is optional and manually updated. The article number of the treaty under which the account holder receives benefits.</description>
    <inlineHelpText>The article number of the treaty under which the account holder receives benefits.</inlineHelpText>
    <label>Form W7 Treaty Article Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>