force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Treaty_Country__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Treaty_Country__c</fullName>
    <description>This field is optional and manually updated. The country under whose treaty the account holder receives benefits.</description>
    <inlineHelpText>The country under whose treaty the account holder receives benefits.</inlineHelpText>
    <label>Form W7 Treaty Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>