force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Type__c</fullName>
    <description>This field is optional and manually updated. Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</description>
    <inlineHelpText>Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</inlineHelpText>
    <label>Form W7 Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nonresident Alien Tax Treaty</fullName>
            </value>
            <value>
                <fullName>Nonresident Alien Filing Tax Return</fullName>
            </value>
            <value>
                <fullName>Resident Alien Filing Tax Return</fullName>
            </value>
            <value>
                <fullName>Citizen Dependent</fullName>
            </value>
            <value>
                <fullName>Citizen Spouse</fullName>
            </value>
            <value>
                <fullName>Nonresident Alien Student, Professor, or Researcher</fullName>
            </value>
            <value>
                <fullName>Dependent or Spouse of Nonresident Alien</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>