force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_Type_Other__c</fullName>
    <description>This field is optional and manually updated. A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</description>
    <inlineHelpText>A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</inlineHelpText>
    <label>Form W7 Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>