force-app/main/default/objects/Contact/fields/LLC_BI__Form_W7_USCIS_Verifies__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W7_USCIS_Verifies__c</fullName>
    <description>This field is optional and manually updated. United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</description>
    <inlineHelpText>United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
    <label>Form W7 USCIS Verifies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Foreign Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>