force-app/main/default/objects/Contact/fields/LLC_BI__Former_Employer_EIN__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Former_Employer_EIN__c</fullName>
    <description>This field is optional and manually updated. The previous employer identification number of the account holder.</description>
    <inlineHelpText>The previous employer identification number of the account holder.</inlineHelpText>
    <label>Former Employer EIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>